<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/tvtitulotemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_temp"
        android:textSize="20dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="201dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnCelFar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/celsius_faren"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <Button
                android:id="@+id/btnCelKel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/celsius_kelvin"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnFarCel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faren_celsius"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <Button
                android:id="@+id/btnkelCel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kelvin_celsius"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"></LinearLayout>

    <TextView
        android:id="@+id/tvtituloDist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_dist"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="201dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnmetercenti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meter_centi"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <Button
                android:id="@+id/btnCentiInch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/centi_inch"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnCentimeter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/centi_meter"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <Button
                android:id="@+id/btnInchCenti"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inch_centi"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>